--- a/MessagingApp-SPA/src/app/app.component.html
+++ b/MessagingApp-SPA/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div style="text-align:left">
   <h1>
-    Welcome to {{ title }}!
-    <app-value></app-value>
+    Messaging App
   </h1>
+  <app-value></app-value>
 </div>
 
 
