--- a/MessagingApp-SPA/src/app/value/value.component.html
+++ b/MessagingApp-SPA/src/app/value/value.component.html
@@ -1,8 +1,13 @@
-
 <div class="row">
-  <div class="col-xs-12" 
-  *ngFor="let values of valueList"
-  >
-    {{values.id}},{{values.name}}
+  <div class="col-xs-10">
+    <ul class="list-group">
+      <a
+        class="list-group-item"
+        style="cursor: pointer"
+        *ngFor="let values of valueList"
+      >
+        {{ values.id }} ({{ values.name }})
+      </a>
+    </ul>
   </div>
 </div>
