Created register service and template forms

--- a/MessagingApp-SPA/src/app/app.component.html
+++ b/MessagingApp-SPA/src/app/app.component.html
@@ -1,9 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:left">
-  <h1>
-    Messaging App
-  </h1>
-  <app-value></app-value>
-</div>
+<app-NavBar></app-NavBar>
+<app-Home></app-Home>
 
 
