--- a/MessagingApp-SPA/src/app/Home/Home.component.html
+++ b/MessagingApp-SPA/src/app/Home/Home.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-    <div *ngIf="!registerMode" style="text-align: center">
+    <div *ngIf="!registerMode" (cancelRegister)= "registerMode = $event" style="text-align: center">
       <h1>Find your match</h1>
       <p class="lead">Come on in to view your matches... All you need to do is sign up!</p>
       <div class="text-center">
@@ -8,10 +8,10 @@
       </div>
     </div>
   
-    <div class="container">
+    <div class="container" *ngIf="registerMode">
       <div class="row justify-content-center">
         <div class="col-4">
-          <app-Register *ngIf="registerMode"></app-Register>
+          <app-Register ></app-Register>
   
         </div>
       </div>
