--- a/MessagingApp-SPA/src/app/NavBar/NavBar.component.html
+++ b/MessagingApp-SPA/src/app/NavBar/NavBar.component.html
@@ -1,18 +1,18 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
    <div class="container">
-      <a class="navbar-brand" href="#">Messaging App</a>
+      <a class="navbar-brand" [routerLink]="['/home']" routerLinkActive="active" >Messaging App</a>
   
     
       <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
         <li class="nav-item ">
-          <a class="nav-link" href="#">Matches 
+          <a class="nav-link" [routerLink]="['/members']" routerLinkActive="active" >Matches 
            </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Lists</a>
+          <a class="nav-link" [routerLink]="['/lists']" routerLinkActive="active" >Lists</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="#">Messages</a>
+          <a class="nav-link " [routerLink]="['/messages']" routerLinkActive="active" >Messages</a>
         </li>
      
       </ul>
