--- a/MessagingApp-SPA/src/app/NavBar/NavBar.component.html
+++ b/MessagingApp-SPA/src/app/NavBar/NavBar.component.html
@@ -23,7 +23,8 @@
           </a>
         
           <div class="dropdown-menu " *dropdownMenu>
-            <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Edit Profile</a>
+            <a class="dropdown-item" style="cursor: pointer" [routerLink]="['/edit']" routerLinkActive="active" >
+              <i class="fa fa-user"></i> Edit Profile</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" (click)="logOut()" style="cursor: pointer"><i class="fa fa-sign-out"></i>Logout</a>
           </div>
